package domain.entities.client;

import domain.entities.EntityId;

public class ClientId extends EntityId{

    public ClientId(int id) {
        super(id);
    }

	
	 

   
}