package domain.entities.examrequest;

import domain.entities.EntityId;

public class ExamRequestId extends EntityId{

	public ExamRequestId(int id) {
		super(id);
	}
	
	
	
}
