package domain.entities.servicenumber;

import domain.entities.EntityId;

public class ServiceNumberId extends EntityId{

	public ServiceNumberId(int id) {
		super(id);
	}
	
	
}
